# kedro_neptune_namespace_issue

./: Dockerfile  docker-compose.yml  pyproject.toml
conf/base/: catalog_neptune.yml  neptune.yml
conf/base/catalog/: catalog_raw.yml
conf/base/parameters/: parameters.yml
data/namespace_1/01_raw/: data_raw.csv
data/namespace_2/01_raw/: data_raw.csv
src/: setup.py
src/basic_namespace/: __init__.py  __main__.py  settings.py
src/basic_namespace/common/nodes/: common_node_01_raw.py
src/basic_namespace/common/pipelines/: common_pipeline_01_raw.py
src/basic_namespace/hooks/: utility_hooks.py
src/basic_namespace/pipelines/namespace_1/: __init__.py  pipeline.py
src/basic_namespace/pipelines/namespace_2/: __init__.py  pipeline.py
